[gd_scene load_steps=24 format=3 uid="uid://bwd5gl3raybvo"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_6sjgq"]
[ext_resource type="Texture2D" uid="uid://ch478i58ato8b" path="res://Graphics/adventurer-v1.5-Sheet.png" id="2_dpg45"]
[ext_resource type="Texture2D" uid="uid://s5wyiauewqkm" path="res://Sprites/Player Idle -Sheet.png" id="3_0mm4e"]
[ext_resource type="Script" path="res://Scripts/StateMachine.gd" id="3_3veec"]
[ext_resource type="Script" path="res://Scripts/States/IdleState.gd" id="4_27klh"]
[ext_resource type="Script" path="res://Scripts/States/WalkState.gd" id="5_w3fu1"]
[ext_resource type="Script" path="res://Scripts/States/JumpState.gd" id="6_ifv8m"]
[ext_resource type="Script" path="res://Scripts/States/InAirState.gd" id="7_jkb0k"]
[ext_resource type="Script" path="res://Scripts/States/DiveState.gd" id="8_lsqns"]
[ext_resource type="Script" path="res://Scripts/States/RollState.gd" id="9_6j2xk"]
[ext_resource type="Script" path="res://Scripts/States/WallSlideState.gd" id="10_etbq6"]
[ext_resource type="Script" path="res://Scripts/States/WallJumpState.gd" id="11_jvi23"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qyo35"]
atlas = ExtResource("2_dpg45")
region = Rect2(250, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_84slk"]
atlas = ExtResource("3_0mm4e")
region = Rect2(22, 29, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qgkq"]
atlas = ExtResource("3_0mm4e")
region = Rect2(85, 29, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_crnw3"]
atlas = ExtResource("2_dpg45")
region = Rect2(50, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocgxg"]
atlas = ExtResource("2_dpg45")
region = Rect2(100, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lem7n"]
atlas = ExtResource("2_dpg45")
region = Rect2(200, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbttn"]
atlas = ExtResource("2_dpg45")
region = Rect2(250, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhsxo"]
atlas = ExtResource("2_dpg45")
region = Rect2(300, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_708tx"]
atlas = ExtResource("2_dpg45")
region = Rect2(0, 111, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_10h70"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyo35")
}],
"loop": true,
"name": &"dive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_84slk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qgkq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_crnw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocgxg")
}],
"loop": true,
"name": &"in_air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lem7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbttn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhsxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_708tx")
}],
"loop": true,
"name": &"roll",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_84slk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qgkq")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2tbhr"]
radius = 3.0
height = 16.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("sprite")]
z_index = 2
collision_layer = 3
collision_mask = 3
script = ExtResource("1_6sjgq")
sprite = NodePath("AnimatedSprite2D")
jump_height = 100.0
jump_time_to_peak = 0.5
jump_time_to_descend = 0.4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_10h70")
animation = &"walk"
frame_progress = 0.574824

[node name="OlSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_10h70")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_2tbhr")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_3veec")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("4_27klh")
sprite = NodePath("../../AnimatedSprite2D")

[node name="WalkState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_w3fu1")
sprite = NodePath("../../AnimatedSprite2D")

[node name="JumpState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("6_ifv8m")
sprite = NodePath("../../OlSprite")

[node name="InAirState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("7_jkb0k")
sprite = NodePath("../../OlSprite")

[node name="DiveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("8_lsqns")
sprite = NodePath("../../OlSprite")

[node name="RollState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("9_6j2xk")
sprite = NodePath("../../OlSprite")

[node name="WallSlideState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("10_etbq6")
sprite = NodePath("../../OlSprite")

[node name="WallJumpState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("11_jvi23")
sprite = NodePath("../../OlSprite")

[node name="WallJumpTimer" type="Timer" parent="StateMachine/WallJumpState"]
wait_time = 0.4

[node name="CoyoteTimer" type="Timer" parent="."]

[connection signal="timeout" from="StateMachine/WallJumpState/WallJumpTimer" to="." method="_on_wall_jump_timer_timeout"]
[connection signal="timeout" from="StateMachine/WallJumpState/WallJumpTimer" to="StateMachine/WallJumpState" method="_on_wall_jump_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="coyote_timeout"]
